--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "envhealth"
-version = "0.1.0"
+version = "0.1.1"
 description = "Environment health checker that validates Python runtime, OS, dependencies, variables and system readiness"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -12,6 +12,12 @@ license = { text = "MIT" }
 
 authors = [
   { name = "Rohan", email = "rohanroni2019@gmail.com" },
+]
+
+dependencies = [
+  "psutil",
+  "requests",
+  "reportlab",
 ]
 
 keywords = ["environment", "system health", "diagnostics", "python tooling", "debugging"]
@@ -26,3 +32,6 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/Rohan7654/envhealth"
 Issues = "https://github.com/Rohan7654/envhealth/issues"
+
+[project.scripts]
+envhealth = "envhealth.cli:main"
